Responsive design ok

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#60a3bc" />
+    <meta name="theme-color" content="#e4e450" />
     <meta name="description" content="Desenvolvedor de software de alta performace, sou especialista em desenvolvimento web e mobile." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
